Implement color commands
Refactor facade
Add message handler

Signed-off-by: Yauheni.Filipovich <yauheni.filipovich@ukg.com>